# TrackerKB

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
hardware/Enclosure/1_CNC-Case/: Bottom_Case.step  Top_Case.step  cnc-case-bottom.step  cnc-case-top.step
hardware/Enclosure/2_Acylic-Case/: layer-1-export-3mm.dxf  layer-2-export-3mm.dxf  layer-3-export-4mm.dxf  layer-4-export-3mm.dxf
hardware/Enclosure/3_3D-Printed-Case/: 3d-case-bottom.step  3d-case-top.step
hardware/M8-Headless-Keyboard-PCB/: M8-Keyboard_PCB.PrjPcb  Schlib1.SchLib
hardware/M8-Headless-Keyboard-PCB/datasheets_and_footprints/DEV-16771/: MODULE_DEV-16771.PcbLib
hardware/M8-Headless-Keyboard-PCB/datasheets_and_footprints/Kailh/: KAILH_SOCKET_PG1350_2024-06-15.pcbdoc  Key_ASEM v3.step
hardware/M8-Headless-Keyboard-PCB/datasheets_and_footprints/RP2040/: RP2040.IntLib
hardware/M8-Headless-Keyboard-PCB/datasheets_and_footprints/RP2040/RP2040/: QFN40P700X700X90-57N.PcbLib  RP2040.SchLib
hardware/Tracker-Keyboard-PCB/: BOM.xlsx  M8-Keyboard_PCB.PrjPcb  RELEASE_NOTES  Sheet1.SchDoc  Tracker_PCB-BOM.xlsx
hardware/Tracker-Keyboard-PCB/datasheets_and_footprints/AP2112K-3.3TRG1/: AP2112K-3.3TRG1.SchLib  SOT95P285X140-5N.PcbLib
hardware/Tracker-Keyboard-PCB/datasheets_and_footprints/DEV-16771/: DEV-16771.SchLib
hardware/Tracker-Keyboard-PCB/datasheets_and_footprints/GL850G/: 28SSOP.PcbLib  GL850G.SchLib
software/: README.md
software/Release/: RELEASE_NOTE.md
software/Release/1.0.0/: pico-m8-keyboard.dis  pico-m8-keyboard.elf  pico-m8-keyboard.elf.map  pico-m8-keyboard.hex  pico-m8-keyboard.uf2
software/Release/1.1.0/: pico-m8-keyboard.dis  pico-m8-keyboard.hex  pico-tracker-keyboard.elf  pico-tracker-keyboard.map  pico-tracker-keyboard.uf2
software/Release/2.0.0/: pico-m8-keyboard-m8c.uf2  pico-m8-keyboard-web-display.uf2
software/src/: CMakeLists.txt  pico-m8-keyboard.cpp
software/src/includes/: Adafruit_USBD_CDC-stub.h  Arduino.h  Stream.h  WString.h  tusb_config.h  usb.h
